packages/dmworkbase/src/Components/WKLayout/index.css
.wk-layout {
    --wk-width-layout-tab: 60px;
    --wk-height-layout-tab-min: 60px;
    --wk-layer-transition: 300ms cubic-bezier(0.33,1,0.68,1);
    --wk-slide-transition: 450ms cubic-bezier(0.25, 1, 0.5, 1);

    width: 100%;
    height: 100%;
    display: flex;
    overflow: hidden;
}

.wk-layout-tab {
    width: var(--wk-width-layout-tab);
    height: 100%;
}

.wk-layout-content {
    width: 100%;
    height: 100%;
    display: flex;
}

.wk-layout-content-left {
    width: var( --wk-width-layout-content-left);
    height: 100%;
    flex-shrink: 0;
    border-right: 1px solid var(--wk-border-subtle);
    background: var(--wk-bg-base);
}

.wk-layout-content-right {
    width: calc(100% - var(--wk-width-layout-content-left));
    height: 100%;
    display: flex;
    position: relative;
    overflow: hidden;
}

@media screen and (max-width: 640px)  {

    /* .wk-layout {
        flex-direction: column-reverse;
    }

    .wk-layout-tab {
        height: var(--wk-height-layout-tab-min);
        width: 100%;
    } */
    .wk-layout-content-right {
        width: 100%;
        position: fixed;
        left: 0;
        top: 0;
        bottom: 0;
        right: 0;
        transform: translate3d(0, 0, 0);
        transition: transform var(--wk-layer-transition);
    }

   .wk-layout-content:not(.wk-layout-open) .wk-layout-content-right {
        transform: translate3d(100vw, 0, 0);
    }

    .wk-layout-content-left {
        width: 100%;
    }

    .wk-layout-tab {
        display: none;
    }

    .wk-layout-content {
        width: 100%;
    }
}

